# src/swagger.yaml
@@ -207,7 +207,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/UserRegister'
+              $ref: '#/components/schemas/FacilityRegister'
       responses:
         '200':
           description: Successful operation
@@ -291,6 +291,42 @@ paths:
                 $ref: '#/components/schemas/internalServerError'
       security:
         - x-auth-token: [ ]
+  /adm/helpNumbersCategory/register:
+    post:
+      tags:
+        - adm
+      summary: Register a help numbers category
+      description: >
+        Register a HelpNumberCategory, given a non empty name.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/HelpNumbersCategory'
+      responses:
+        '200':
+          description: Successful operation
+        '400':
+          description: Invalid request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/invalidRequest'
+        '422':
+          description: Name already used
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NameAlreadyUsed'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/internalServerError'
+      security:
+        - x-auth-token: [ ]
   /adm/register:
     post:
       tags:
@@ -303,7 +339,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/FacilityRegister'
+              $ref: '#/components/schemas/UserRegister'
       responses:
         '200':
           description: Successful operation
@@ -471,6 +507,12 @@ components:
         firstConnexion:
           type: boolean
           example: true
+    HelpNumbersCategory:
+      type: object
+      properties:
+        name:
+          type: string
+          example: "Test"
     token:
       type: object
       properties:
@@ -516,6 +558,12 @@ components:
         message:
           type: string
           example: 'This name is already used'
+    AtLeastEmailOrTelephone:
+      type: object
+      properties:
+        message:
+          type: string
+          example: 'At least email or telephone have to be present'
     ok:
       type: object
       properties:
